--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -1,14 +1,13 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="pt-BR"> 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %} {% endblock %}</title>
+  <title>{% block title %}{% endblock %}</title>
 </head>
-
 <body>
-  {% block content %} {% endblock %}
+  <header>{% block header %}{% endblock %}</header>
+  <main>{% block main %}{% endblock %}</main>
+  <footer>{% block footer %}{% endblock %}</footer>
 </body>
-
 </html>
